--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
  <div class="topnav">
-  <a class="active" href="#home">Презентации</a>
+  <a class="active" href="https://artyr208v3.github.io/Artyr208v4/">Презентации</a>
 </div>
 <h1 class="hosting">Способы написания конспектов</h1>
 
